--- a/API/docker-compose.yml
+++ b/API/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
     app:
         build: .
-        image: javaapp
+        image: mcia-femiot-p2-6-4
         container_name: app
         ports:
             - 8080:8080
